[AIM] Fix alignment on composebox collapsed state
The hint text/inputted text is slightly too far down. Moving up to
better align with spec.

Bug: 440415065
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6876575
Commit-Queue: Duncan Mercer <mercerd@google.com>
Cr-Commit-Position: refs/heads/main@{#1505319}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -220,7 +220,7 @@
   max-height: calc-size(fit-content, min(size - 24px, 190px));
   min-height: 72px;
   outline: none;
-  padding: 20px 0 0;
+  padding: 16px 0 0;
   position: relative;
   resize: none;
   scrollbar-width: none;
